# ism330is-rs

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml
bsp/: Cargo.toml  README.md  build.rs
bsp/src/: main.rs
bsp/src/examples/: ispu_norm.rs  read_irq.rs  read_polling.rs  self_test.rs  sensor_hub.rs
examples/ispu_norm_stm32f401re/: Cargo.toml  README.md  build.rs
examples/ispu_norm_stm32f401re/src/: main.rs
examples/ispu_norm_stm32f401re_embassy/: Cargo.toml  README.md  build.rs
examples/ispu_norm_stm32f401re_embassy/src/: main.rs
examples/read_data_drdy_stm32f401re/: Cargo.toml  README.md
examples/read_data_drdy_stm32f401re/src/: main.rs
examples/read_data_drdy_stm32f401re_embassy/: Cargo.toml  README.md
examples/read_data_drdy_stm32f401re_embassy/src/: main.rs
examples/read_data_polling_stm32f401re/: Cargo.toml  README.md
examples/read_data_polling_stm32f401re/src/: main.rs
examples/read_data_polling_stm32f401re_embassy/: Cargo.toml  README.md
examples/read_data_polling_stm32f401re_embassy/src/: main.rs
examples/self_test_stm32f401re/: Cargo.toml  README.md
examples/self_test_stm32f401re/src/: main.rs
examples/self_test_stm32f401re_embassy/: Cargo.toml  README.md
examples/self_test_stm32f401re_embassy/src/: main.rs
examples/sensor_hub_stm32f401re/: Cargo.toml  README.md
examples/sensor_hub_stm32f401re/src/: main.rs
examples/sensor_hub_stm32f401re_embassy/: Cargo.toml  README.md
examples/sensor_hub_stm32f401re_embassy/src/: main.rs
src/: driver.rs  lib.rs
src/register/: ispu.rs  main.rs  membank.rs  mod.rs  sensor_hub.rs
